--- a/package.json
+++ b/package.json
@@ -2,25 +2,13 @@
   "name": "kidlink",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.12.10",
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "bootstrap": "^4.5.3",
-    "jquery": "^3.5.1",
-    "p5": "^1.2.0",
-    "popper.js": "^1.16.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react_ujs": "^2.6.1",
-    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:martinikei/kidlink.git",
+  "author": "marcin <marcin@sls>",
+  "license": "MIT"
 }
