--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kidlink",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "^5.2.1"
   },
   "version": "0.1.0",
   "devDependencies": {
